Closed Bug 1332246 Opened 8 years ago Closed 8 years ago

Crash with MacOS 10.11 when attempting to update Mac OS X address book [ @libsystem_kernel.dylib@0x16f06] via nsAbOSXCard::Update

Categories

(Thunderbird :: Address Book, defect)

51 Branch
Unspecified
macOS
defect
Not set
critical

Tracking

(thunderbird52+ fixed, thunderbird53 fixed, thunderbird54 fixed)

RESOLVED FIXED
Thunderbird 54.0
Tracking Status
thunderbird52 + fixed
thunderbird53 --- fixed
thunderbird54 --- fixed

People

(Reporter: whimboo, Assigned: mstange)

References

Details

(Keywords: crash)

Crash Data

Attachments

(2 files)

Mozilla/5.0 (Macintosh; Intel Mac OS X 10.11; rv:51.0) Gecko/20100101 Thunderbird/51.0 ID:20170117151053 CSet: 13d3127744a874a46c7b65dd5fb92293bfe51a01 Earlier today I updated my local Thunderbird application from the current release to the latest beta. After a couple of minutes I got a crash, and now Thunderbird crashes each time during startup. Report: bp-8cbba8d4-ffce-4e1a-a88b-4cc1c2170119. As it looks like it happens when we try to access the Mac OS X address book: 0 libsystem_kernel.dylib libsystem_kernel.dylib@0x16f06 [..] 13 XUL AppendToString(NSString const*, nsString&) /builds/slave/tb-rel-c-beta-m64_bld-00000000/build/mailnews/addrbook/src/nsAbOSXUtils.mm:29 14 XUL nsAbOSXCard::Update(bool) /builds/slave/tb-rel-c-beta-m64_bld-00000000/build/mailnews/addrbook/src/nsAbOSXCard.mm:61 15 XUL non-virtual thunk to nsAbOSXCard::Init(char const*) /builds/slave/tb-rel-c-beta-m64_bld-00000000/build/mailnews/addrbook/src/nsAbOSXCard.mm:148 16 XUL CreateCard /builds/slave/tb-rel-c-beta-m64_bld-00000000/build/mailnews/addrbook/src/nsAbOSXDirectory.mm:85 17 XUL nsAbOSXDirectory::Init(char const*) /builds/slave/tb-rel-c-beta-m64_bld-00000000/build/mailnews/addrbook/src/nsAbOSXDirectory.mm:544 Workaround here for the startup crash is to disconnect from the network. But I assume the crash comes back once a new mail arrives.
whimboo, does the workaround help you with 51.0b2 ? System Preferences > Security & Privacy and select the Privacy tab- DEselect Thunderbird (note - do not dup this to bug 1286613 unless it is tested a version that has the patches from bug 1286613 and bug 1332508)
Depends on: 1286613
Flags: needinfo?(hskupin)
Summary: Startup crash when accessing Mac OS X address book [ @libsystem_kernel.dylib@0x16f06] → Startup crash with MacOS 10.11 when accessing Mac OS X address book [ @libsystem_kernel.dylib@0x16f06]
Well, when I would do the above I wouldn't have access to any of my contacts. Also if I disable Thunderbird from having access to the addressbook, how should the crash be reproduced if the code path is no longer used? Btw. this crash seems to happen when there is an incoming email from a person maybe not yet in the address book, and Thunderbird tries to add this person. That's why the signature: nsAbOSXCard::Update(bool). It's not a startup crash for me if there is not such an incoming email.
Flags: needinfo?(hskupin)
Thanks for pointing out these details. Yeah, the workaround is a non-starter unless you WANT to use 51 and don't miss the AB. Just consider it a point of information. :) A. I thought Thunderbird wasn't capable of writing to Mac contacts? B. If you're game, the patches previously mentioned should be available in 53 nightly at https://archive.mozilla.org/pub/thunderbird/nightly/latest-comm-central/
Summary: Startup crash with MacOS 10.11 when accessing Mac OS X address book [ @libsystem_kernel.dylib@0x16f06] → Crash with MacOS 10.11 when attempting to update Mac OS X address book [ @libsystem_kernel.dylib@0x16f06] via nsAbOSXCard::Update
Antony's bp-f809a931-629b-45cc-8711-9d3d32170126 Build ID 20170125030213 TB54.0a1 proves this is not fixed by bug 1286613. It is critical to the 52 beta process that we fix this ASAP.
(In reply to Wayne Mery (:wsmwk, NI for questions) from comment #5) > Antony's bp-f809a931-629b-45cc-8711-9d3d32170126 Build ID 20170125030213 > TB54.0a1 proves this is not fixed by bug 1286613. Also patrick's bp-6e92da9c-874b-4fc3-b8de-e516a2170124 53.0a2 20170124004006 10.12.3 16D32 Can someone answer this question please - is TB capable of updating Mac contacts?
The last non-system library frame is in AppendToString(NSString const*, nsString&) at mailnews/addrbook/src/nsAbOSXUtils.mm:29, but that could be wrong because there is no debug info for CoreFoundation. The frames above that suggest whatever CoreFoundation is being called for is failing and throws an exception.
The frames above AppendToString are: #0 __pthread_kill (in libsystem_kernel.dylib) #1 abort (in libsystem_c.dylib) #2 abort_message (in libc++abi.dylib) #3 default_terminate_handler() (in libc++abi.dylib) #4 _objc_terminate() (in libobjc.A.dylib) #5 std::__terminate(void (*)()) (in libc++abi.dylib) #6 __cxa_throw (in libc++abi.dylib) #7 objc_exception_throw (in libobjc.A.dylib) #8 -[NSObject(NSObject) doesNotRecognizeSelector:] (in CoreFoundation) #9 ___forwarding___ (in CoreFoundation) #10 __forwarding_prep_0___ (in CoreFoundation) #11 AppendToString
In ans to comment 6... I can select and then see the Mac OSX address book in the Address Book list Pane: however, if I want to add to that book as a new contact, I do not have that AB showing in the drop down list, nor does it show in preferences for composition as an option for Default for AB. I am still on 51.0 and have the Option in Security for TB to access the Mac contacts as Off. I could reload 49 or earlier and reset the flag and try then as prob cannot access whilst flag off for 51.0 build. Guess Q. is, does anyone need to write an address to the Mac Contacts or read and choose from this AB for a mail written in TB?
So apparently, for some property, [aOSXCard valueForProperty:aProperty] returns an object that is non-null but not an NSString. With a debug build it should be fairly easy to find out what property that is and what it returns instead.
(In reply to Wayne Mery (:wsmwk, NI for questions) from comment #6) > > Can someone answer this question please - is TB capable of updating Mac > contacts? No, I don't think so. If I create a new contact with TB 45, I can only choose to save the contact in one of my local address books (I don't have LDAP though). The Mac OS Addressbook seems to be read-only.
Blocks: TB52found
(In reply to Markus Stange [:mstange] from comment #10) > So apparently, for some property, [aOSXCard valueForProperty:aProperty] > returns an object that is non-null but not an NSString. With a debug build > it should be fairly easy to find out what property that is and what it > returns instead. OK, too keep the ball rolling today, can someone grab https://archive.mozilla.org/pub/thunderbird/tinderbox-builds/comm-beta-macosx64-debug/1485949508/ 10.12 signature is [@ libsystem_kernel.dylib@0x19dd6 ]
Crash Signature: [@ libsystem_kernel.dylib@0x16f06] → [@ libsystem_kernel.dylib@0x16f06] [@ libsystem_kernel.dylib@0x19dd6]
(In reply to Wayne Mery (:wsmwk, NI for questions) from comment #6) > Can someone answer this question please - is TB capable of updating Mac > contacts? There is no implementation of AddCard or ModifyCard in the OSX address book, so Thunderbird cannot modify OSX cards. Which is too bad, I had hoped that the solution to this in the short run was going to be to disable code that modified cards. It's hard to believe that this is not similar to bug 1286613, even it that patch does not solve this problem.
I am a MAC user but NOT their apps... TB and Firefox fan. If one is using TB then is anyone really bothered to save contacts for use on MAC apps like Mail and such? I am not saying I do not think they would... posing the question, as this would then drive the real need to configure TB to do this. If not that a demand then just advise either turning off the flag in Security or even removing the TB code link to do so and this would fix the crash issue Just a though
I'd say the main reason why this may be an interesting feature for some users (not me though) is to synchronize contacts with their iPhone (via iCloud).
you have a good point there!!! ha ha as i am an android user was not something i considered. Be good to TB working on Android one day sooon just like FF does (and i suppose iPhone too )
(In reply to Kent James (:rkent) from comment #14) > (In reply to Wayne Mery (:wsmwk, NI for questions) from comment #6) > > > Can someone answer this question please - is TB capable of updating Mac > > contacts? > > There is no implementation of AddCard or ModifyCard in the OSX address book, > so Thunderbird cannot modify OSX cards. Which is too bad, I had hoped that > the solution to this in the short run was going to be to disable code that > modified cards. Which makes me wonder why there is an update method at all. > It's hard to believe that this is not similar to bug 1286613, even if that > patch does not solve this problem. Indeed. Maybe that patch doesn't go far enough. Anywho, we badly need this fixed, so first we need someone with Mac to do comment 12
Flags: needinfo?(patrick)
Flags: needinfo?(mh+mozilla)
I tried the debug build and got the output attached. Is this what you need?
Flags: needinfo?(patrick)
(In reply to Patrick Brunschwig from comment #19) > Created attachment 8833772 [details] > Output from EarlybirdDebug build > > I tried the debug build and got the output attached. Is this what you need?
Flags: needinfo?(rkent)
Comment on attachment 8833772 [details] Output from EarlybirdDebug build Wayne, I'm not sure why you directed this at me. My ability to do anything on OSX is extremely limited. I can compile and do obvious fixes, but I cannot diagnose deep issues, particularly anything related to OSX core libraries.
Flags: needinfo?(rkent)
Comment on attachment 8833825 [details] Bug 1332246 - Don't expect kABInstantMessageProperty values to be NSStrings. Passing to Mike as I'm not active on Thunderbird these days.
Attachment #8833825 - Flags: review?(standard8) → review?(mconley)
Flags: needinfo?(mh+mozilla)
Comment on attachment 8833825 [details] Bug 1332246 - Don't expect kABInstantMessageProperty values to be NSStrings. https://reviewboard.mozilla.org/r/109952/#review111578 Looks okay to me, but I didn't test. Thanks for the patch!
Attachment #8833825 - Flags: review?(mconley) → review+
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 54.0
Comment on attachment 8833825 [details] Bug 1332246 - Don't expect kABInstantMessageProperty values to be NSStrings. Uplift coming. Since C-C trunk is pretty busted at the moment, perhaps someone can try this on Aurora once uplifted.
Attachment #8833825 - Flags: approval-comm-beta+
Attachment #8833825 - Flags: approval-comm-aurora+
(In reply to Jorg K (GMT+1) from comment #26) > Comment on attachment 8833825 [details] > Bug 1332246 - Don't expect kABInstantMessageProperty values to be NSStrings. > > Uplift coming. Since C-C trunk is pretty busted at the moment, perhaps > someone can try this on Aurora once uplifted. As soon as it's done I'll have someone test https://treeherder.mozilla.org/#/jobs?repo=comm-aurora&revision=d622687456eb6da504f9b057b682b9bb88b38064
Flags: needinfo?(vseerror)
So far I have 3 good reports and none bad. So good for uplift to beta
Flags: needinfo?(vseerror)
Already uplifted, see comment #28.
I'll keep Earlybird running for a mo as latest and has Lightning already in it! As a heads-up, may raise another tkt as I keep getting connection issues when TB needs to get mail from my provider. been last few releases Great to have the fix
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: