Bug 1332246 - Don't expect kABInstantMessageProperty values to be NSStrings. r=mconley

In 10.12 on my machine they are NSDictionary values. This patch also respects
the instant messaging service name and assigns the user name to the right
field, or even to multiple fields if multiple IM services are specified.

MozReview-Commit-ID: 4oxg1CXjo0D

--HG--
extra : amend_source : d7e19f826d8eb99778135425f5cf71708e97b6d8